Upgrade intellij gradle plugin to 2.x (#966)
* Update to intellij gradle platform plugin version 2.0.0

* Refactor a bit the plugin configuration

* Review: set proper project name and re-add debug logs for local instance

* Finish migration to v2

---------

Co-authored-by: Etienne Brateau <etienne.brateau@gmail.com>